[tool.poetry]
name = "copper-poker"
version = "0.1.0"
description = ""
authors = ["Alex Kravetz <alexdkravetz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
